--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
 body {
-    color: black;
-    background-color: white;
+    color: white;
+    background-color: black;
     margin: 0;
     padding: 0;
   }
   
  td{
-   padding:0.5rem
+   font-family: 'Luckiest Guy';
+ }
+
+ 
+ .medal-info-container{
+   display: inline-flex;
+ }
+ .img-container{
+
+  display: inline-flex;
+ }
+ .medal{
+   max-width: 25px;
+   align-self: center ;
+
  }
