--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	color: black;
 	margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 h1 {
   color: #426696;
@@ -23,7 +23,7 @@ td {
   padding: 0;
 }
 .medal-number, td{
-  color:rgba(0, 5, 0, 0.5);
+  color:#426696;
 
 }
 
@@ -110,5 +110,15 @@ a{
 @media only screen and (max-width: 600px) {
   .glass{
     width: 90%;
+    margin-top:1rem
   }
+  main{
+    align-items: flex-start;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .glass{
+    width: 50vw;
+  }
+  
 }
